# openai-sdk

./: .gitignore  Cargo.toml
openai-sdk/: Cargo.toml
openai-sdk-codegen/: Cargo.toml
openai-sdk-codegen/src/: lib.rs
openai-sdk/src/: lib.rs  macros.rs
openai-sdk/src/models/: mod.rs
openai-sdk/src/models/responses/: streaming.rs
openai-sdk/src/responses/: streaming.rs
openai-sdk/src/transport/: streaming.rs
src/: lib.rs
src/models/responses/: mod.rs
src/responses/: mod.rs
src/transport/: mod.rs
