[package]
name = "openai-sdk"
version = "0.1.0"
edition = "2024"

[features]
all = ["responses", "responses-streaming"]
responses = [
    "dep:chrono",
    "dep:serde-bool",
    "dep:serde_with",
    "serde/derive",
    "serde_with/chrono",
]
responses-streaming = [
    "responses",
    "dep:bytes",
    "dep:eventsource-stream",
    "dep:futures",
    "dep:pin-project",
    "reqwest/stream",
]

[dependencies]
bytes = { version = "1.11.0", optional = true }
chrono = { version = "0.4.42", default-features = false, optional = true }
derive_more = { version = "2.1.0", features = ["from", "into", "display"] }
eventsource-stream = { version = "0.2.3", optional = true }
futures = { version = "0.3.31", default-features = false, optional = true }
openai-sdk-codegen = { version = "0.1.0", path = "../openai-sdk-codegen" }
paste = "1.0.15"
pin-project = { version = "1.1.10", optional = true }
reqwest = { version = "0.12.26", default-features = false, features = [
    "json",
    "rustls-tls",
] }
secrecy = "0.10.3"
serde = "1.0.228"
serde-bool = { version = "0.1.4", optional = true }
serde_json = "1.0.145"
serde_with = { version = "3.16.1", optional = true, features = ["chrono"] }
snafu = "0.8.9"
url = "2.5.7"

[dev-dependencies]
dotenv_codegen = "0.15.0"
tokio = { version = "1.48.0", features = ["macros"] }
